--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,11 @@
 spring.application.name=facebook
 
 # Database Configuration (PostgreSQL)
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
+# Prefer SPRING_DATASOURCE_URL (set by start script or platform). Fallback to a valid local JDBC URL.
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:admin}
-# Server Port (Preventing conflict with Postgres on 8080)
-
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:postgres}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:admin}}
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
