--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 # Application Name
 spring.application.name=facebook
 
-# Database Configuration (PostgreSQL)
-# Prefer SPRING_DATASOURCE_URL (set by start script or platform). Fallback to a valid local JDBC URL.
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
+# DataSource configuration for PostgreSQL
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:postgres}}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:admin}}
 
-# JPA/Hibernate Configuration
+# JPA/Hibernate configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Optional: Connection pool settings (HikariCP)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
